--- a/.gitignore
+++ b/.gitignore
@@ -13,17 +13,7 @@ dist/
 .env.local
 .env.*.local
 
-# Editor and OS files
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-# Logs
-*.log
 
 # Miscellaneous
 .DS_Store
@@ -31,3 +21,28 @@ Thumbs.db
 
 # GitHub Pages specific
 *.cache
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
