--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rosskugler.github.io/Ross_Portfolio",
   "name": "ross_portfolio",
   "private": true,
   "version": "0.0.0",
